Use tmux plugin manager and tmux sensible plugin
This allows removing some options from .tmux.conf.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,19 +1,11 @@
-# Set default terminal to a variant of screen that supports 256 colors.
-set-option -g default-terminal "screen-256color"
-
 # Start window indices at 1.
 set-option -g base-index 1
 
 # Renumber windows after removing one.
 set-option -g renumber-windows on
 
-# Unbind default tmux C-b prefix because it conflicts with Vim's C-b binding for
-# scrolling windows backwards (upwards).
-unbind C-b
-
 # Set C-Space as the prefix.
 set-option -g prefix C-Space
-bind-key C-Space send-prefix -2
 
 # Use Vim keybindings in copy mode.
 set-window-option -g mode-keys vi
@@ -80,3 +72,14 @@ set-option -g display-panes-colour brightred #orange
 # clock
 set-window-option -g clock-mode-colour green #green
 
+# Plugins
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-sensible"
+
+# Install tmux plugin manager if it is not already installed.
+if "test ! -d ~/.tmux/plugins/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+
+# Initialize tmux plugin manager (keep this line at the very bottom of
+# tmux.conf).
+run "~/.tmux/plugins/tpm/tpm"
