--- a/tmux.conf
+++ b/tmux.conf
@@ -1,11 +1,14 @@
+# Set ctrl-space as the prefix.
+set-option -g prefix C-Space
+
+# Set prefix followed by space to switch to the previously selected window.
+bind Space last-window
+
 # Start window indices at 1.
 set-option -g base-index 1
 
 # Renumber windows after removing one.
 set-option -g renumber-windows on
-
-# Set C-Space as the prefix.
-set-option -g prefix C-Space
 
 # Use Vim keybindings in copy mode.
 set-window-option -g mode-keys vi
@@ -33,12 +36,6 @@ bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
 bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|n?vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
-
-# Open new windows and panes with the working directory set to the same
-# directory as the working directory of the current pane.
-bind c new-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind '"' split-window -c "#{pane_current_path}"
 
 # Solarized dark colors
 
@@ -75,6 +72,7 @@ set-window-option -g clock-mode-colour green #green
 # Plugins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "tmux-plugins/tmux-pain-control"
 
 # Install tmux plugin manager if it is not already installed.
 if "test ! -d ~/.tmux/plugins/tpm" \
