Move tmux plugin manager options to top of .tmux.conf

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,13 @@
+# Install tmux plugin manager if it is not already installed.
+if "test ! -d ~/.tmux/plugins/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+
+# Plugins.
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "tmux-plugins/tmux-pain-control"
+set -g @plugin "seebi/tmux-colors-solarized"
+
 # Set ctrl-space as the prefix.
 set-option -g prefix C-Space
 
@@ -39,16 +49,6 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE 
 
 # Use the Solarized dark color theme.
 set -g @colors-solarized "dark"
-
-# Plugins
-set -g @plugin "tmux-plugins/tpm"
-set -g @plugin "tmux-plugins/tmux-sensible"
-set -g @plugin "tmux-plugins/tmux-pain-control"
-set -g @plugin "seebi/tmux-colors-solarized"
-
-# Install tmux plugin manager if it is not already installed.
-if "test ! -d ~/.tmux/plugins/tpm" \
-  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
 
 # Initialize tmux plugin manager (keep this line at the very bottom of
 # tmux.conf).
