Use tmux yank plugin
This allows removing the custom vi copy mode keybinding for 'v' that
only works on OS X.

--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,7 @@ if "test ! -d ~/.tmux/plugins/tpm" \
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "tmux-plugins/tmux-pain-control"
+set -g @plugin "tmux-plugins/tmux-yank"
 set -g @plugin "seebi/tmux-colors-solarized"
 
 # Set ctrl-space as the prefix.
@@ -23,12 +24,14 @@ set-option -g renumber-windows on
 # Use Vim keybindings in copy mode.
 set-window-option -g mode-keys vi
 
-# In copy mode setup 'v' to begin selection and 'y' to copy as in Vim.
+# In copy mode setup 'v' to begin selection and setup 'ctrl-v' to toggle
+# rectangle selection mode which is normally bound to 'v'.
 bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+bind-key -t vi-copy C-v rectangle-toggle
 
 # Update default copy mode copy binding 'Enter' to also use copy-pipe.
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# TODO: Figure out a way to do this that not only works on OS X.
+# bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Enable copy mode scrolling using the mouse wheel.
 set-window-option -g mode-mouse on
