--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,8 @@
+# Set a couple of variables that can be used to conditionally set options that
+# are only supported in specific tmux versions.
+tmux_21_min='[ $(tmux -V | tr -dC "[:digit:]") -lt 21 ]'
+tmux_21_plus='[ $(tmux -V | tr -dC "[:digit:]") -ge 21 ]'
+
 # Install tmux plugin manager if it is not already installed.
 if "test ! -d ~/.tmux/plugins/tpm" \
   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
@@ -8,6 +13,7 @@ set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "tmux-plugins/tmux-pain-control"
 set -g @plugin "tmux-plugins/tmux-yank"
 set -g @plugin "seebi/tmux-colors-solarized"
+set -g @plugin "nhdaly/tmux-scroll-copy-mode"
 
 # Set ctrl-space as the prefix.
 set-option -g prefix C-Space
@@ -34,13 +40,16 @@ bind-key -t vi-copy C-v rectangle-toggle
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Enable copy mode scrolling using the mouse wheel.
-set-window-option -g mode-mouse on
+if-shell "$tmux_21_min" "set-window-option -g mode-mouse on"
 
 # Enable selecting of windows and selecting and resizing of panes with the
 # mouse.
-set-option -g mouse-select-window on
-set-option -g mouse-select-pane on
-set-option -g mouse-resize-pane on
+if-shell "$tmux_21_min" "set-option -g mouse-select-window on"
+if-shell "$tmux_21_min" "set-option -g mouse-select-pane on"
+if-shell "$tmux_21_min" "set-option -g mouse-resize-pane on"
+
+# Enable mouse support.
+if-shell "$tmux_21_plus" "set-option -g mouse on"
 
 # Smart pane switching with awareness of vim splits in combination with
 # vim-tmux-navigator.
