Order options in tmux.conf by tmux version in which they are supported
The options that are supported by older tmux versions are first in the
file. The options that are only supported by the latest tmux version
last.

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,3 @@
-# Set a couple of variables that can be used to conditionally set options that
-# are only supported in specific tmux versions.
-tmux_21_min='[ $(tmux -V | tr -dC "[:digit:]") -lt 21 ]'
-tmux_21_plus='[ $(tmux -V | tr -dC "[:digit:]") -ge 21 ]'
-
-# Install tmux plugin manager if it is not already installed.
-if "test ! -d ~/.tmux/plugins/tpm" \
-  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
-
-# Plugins.
-set -g @plugin "tmux-plugins/tpm"
-set -g @plugin "tmux-plugins/tmux-sensible"
-set -g @plugin "tmux-plugins/tmux-pain-control"
-set -g @plugin "tmux-plugins/tmux-yank"
-set -g @plugin "seebi/tmux-colors-solarized"
-set -g @plugin "nhdaly/tmux-scroll-copy-mode"
-
 # Set ctrl-space as the prefix.
 set-option -g prefix C-Space
 
@@ -23,9 +6,6 @@ bind Space last-window
 
 # Start window indices at 1.
 set-option -g base-index 1
-
-# Renumber windows after removing one.
-set-option -g renumber-windows on
 
 # Use Vim keybindings in copy mode.
 set-window-option -g mode-keys vi
@@ -39,6 +19,9 @@ bind-key -t vi-copy C-v rectangle-toggle
 # TODO: Figure out a way to do this that not only works on OS X.
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
+# Variable that is true if tmux version is lower than 2.1.
+tmux_21_min='[ $(tmux -V | tr -dC "[:digit:]") -lt 21 ]'
+
 # Enable copy mode scrolling using the mouse wheel.
 if-shell "$tmux_21_min" "set-window-option -g mode-mouse on"
 
@@ -48,8 +31,11 @@ if-shell "$tmux_21_min" "set-option -g mouse-select-window on"
 if-shell "$tmux_21_min" "set-option -g mouse-select-pane on"
 if-shell "$tmux_21_min" "set-option -g mouse-resize-pane on"
 
-# Enable mouse support.
-if-shell "$tmux_21_plus" "set-option -g mouse on"
+# Variable that is true if tmux version is 1.7 or higher.
+tmux_17_plus='[ $(tmux -V | tr -dC "[:digit:]") -ge 17 ]'
+
+# Renumber windows after removing one.
+if-shell "$tmux_17_plus" "set-option -g renumber-windows on"
 
 # Smart pane switching with awareness of vim splits in combination with
 # vim-tmux-navigator.
@@ -60,8 +46,26 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+# Install tmux plugin manager if it is not already installed.
+if "test ! -d ~/.tmux/plugins/tpm" \
+  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+
+# Plugins.
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-sensible"
+set -g @plugin "tmux-plugins/tmux-pain-control"
+set -g @plugin "tmux-plugins/tmux-yank"
+set -g @plugin "seebi/tmux-colors-solarized"
+set -g @plugin "nhdaly/tmux-scroll-copy-mode"
+
 # Use the Solarized dark color theme.
 set -g @colors-solarized "dark"
+
+# Variable that is true if tmux version is 2.1 or higher.
+tmux_21_plus='[ $(tmux -V | tr -dC "[:digit:]") -ge 21 ]'
+
+# Enable mouse support.
+if-shell "$tmux_21_plus" "set-option -g mouse on"
 
 # Initialize tmux plugin manager (keep this line at the very bottom of
 # tmux.conf).
