Disable support for UTF-8 mouse input in tmux
This appears to fix the issue that mouse clicks or mouse scrolling
sometimes causes characters to be inserted in (older versions of) Gnome
Terminal.

--- a/tmux.conf
+++ b/tmux.conf
@@ -19,6 +19,11 @@ bind-key -t vi-copy C-v rectangle-toggle
 # TODO: Figure out a way to do this that not only works on OS X.
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
+# Disable support for UTF-8 mouse input. This appears to fix the issue that
+# mouse clicks or mouse scrolling sometimes causes characters to be inserted in
+# (older verstions of) Gnome Terminal.
+set-option -g mouse-utf8 off
+
 # Variable that is true if tmux version is lower than 2.1.
 tmux_21_min='[ $(tmux -V | tr -dC "[:digit:]") -lt 21 ]'
 
