tmux: Do not set the terminal clipboard content using xterm escape sequences
It is not supported by Gnome Terminal and causes garbage characters to
appear in the other pane of a split window.

--- a/tmux.conf
+++ b/tmux.conf
@@ -24,6 +24,10 @@ bind-key -t vi-copy C-v rectangle-toggle
 # (older verstions of) Gnome Terminal.
 set-option -g mouse-utf8 off
 
+# Do not attempt to set the terminal clipboard content using xterm escape
+# sequences because it is not supported by Gnome Terminal.
+set-option -s set-clipboard off
+
 # Variable that is true if tmux version is lower than 2.1.
 tmux_21_min='[ $(tmux -V | tr -dC "[:digit:]") -lt 21 ]'
 
