Fix typo in comment

--- a/tmux.conf
+++ b/tmux.conf
@@ -21,7 +21,7 @@ bind-key -t vi-copy C-v rectangle-toggle
 
 # Disable support for UTF-8 mouse input. This appears to fix the issue that
 # mouse clicks or mouse scrolling sometimes causes characters to be inserted in
-# (older verstions of) Gnome Terminal.
+# (older versions of) Gnome Terminal.
 set-option -g mouse-utf8 off
 
 # Do not attempt to set the terminal clipboard content using xterm escape
