--- a/tmux.conf
+++ b/tmux.conf
@@ -64,11 +64,8 @@ set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-sensible"
 set -g @plugin "tmux-plugins/tmux-pain-control"
 set -g @plugin "tmux-plugins/tmux-yank"
-set -g @plugin "seebi/tmux-colors-solarized"
+set -g @plugin "mshkrebtan/base16-tmux"
 set -g @plugin "nhdaly/tmux-scroll-copy-mode"
-
-# Use the Solarized dark color theme.
-set -g @colors-solarized "dark"
 
 # Variable that is true if tmux version is 2.1 or higher.
 tmux_21_plus='[ $(tmux -V | tr -dC "[:digit:]") -ge 21 ]'
