--- a/tmux.conf
+++ b/tmux.conf
@@ -2,7 +2,7 @@
 set-option -g prefix C-Space
 
 # Set prefix followed by space to switch to the previously selected window.
-bind Space last-window
+bind-key Space last-window
 
 # Start window indices at 1.
 set-option -g base-index 1
@@ -10,69 +10,68 @@ set-option -g base-index 1
 # Use Vim keybindings in copy mode.
 set-window-option -g mode-keys vi
 
-# In copy mode setup 'v' to begin selection and setup 'ctrl-v' to toggle
-# rectangle selection mode which is normally bound to 'v'.
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy C-v rectangle-toggle
+# Accept xterm escape sequences to set tmux buffers and attempt to set the
+# terminal clipboard content using xterm escape sequences.
+set-option -s set-clipboard on
+
+# Tell tmux that any 256 color terminal in which it is running supports RGB
+# colors.
+set-option -ga terminal-overrides ',*256col*:RGB'
 
 # Update default copy mode copy binding 'Enter' to also use copy-pipe.
 # TODO: Figure out a way to do this that not only works on OS X.
 # bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Disable support for UTF-8 mouse input. This appears to fix the issue that
-# mouse clicks or mouse scrolling sometimes causes characters to be inserted in
-# (older versions of) Gnome Terminal.
-set-option -g mouse-utf8 off
-
-# Do not attempt to set the terminal clipboard content using xterm escape
-# sequences because it is not supported by Gnome Terminal.
-set-option -s set-clipboard off
-
-# Variable that is true if tmux version is lower than 2.1.
-tmux_21_min='[ $(tmux -V | tr -dC "[:digit:]") -lt 21 ]'
+run-shell 'tmux setenv -g TMUX_VERSION_INT $(tmux -V | tr -dC "[:digit:]")'
 
 # Enable copy mode scrolling using the mouse wheel.
-if-shell "$tmux_21_min" "set-window-option -g mode-mouse on"
+if-shell '[ "$TMUX_VERSION_INT" -lt "21" ]' \
+  'set-window-option -g mode-mouse on'
 
 # Enable selecting of windows and selecting and resizing of panes with the
 # mouse.
-if-shell "$tmux_21_min" "set-option -g mouse-select-window on"
-if-shell "$tmux_21_min" "set-option -g mouse-select-pane on"
-if-shell "$tmux_21_min" "set-option -g mouse-resize-pane on"
+if-shell '[ "$TMUX_VERSION_INT" -lt "21" ]' \
+  'set-option -g mouse-select-window on; \
+   set-option -g mouse-select-pane on; \
+   set-option -g mouse-resize-pane on'
 
-# Variable that is true if tmux version is 1.7 or higher.
-tmux_17_plus='[ $(tmux -V | tr -dC "[:digit:]") -ge 17 ]'
+# Disable support for UTF-8 mouse input. This appears to fix the issue that
+# mouse clicks or mouse scrolling sometimes causes characters to be inserted in
+# (older versions of) Gnome Terminal.
+if-shell '[ "$TMUX_VERSION_INT" -lt "22" ]' \
+  'set-option -g mouse-utf8 off'
+
+# In copy mode setup 'v' to begin selection and setup 'ctrl-v' to toggle
+# rectangle selection mode which is normally bound to 'v'.
+if-shell '[ "$TMUX_VERSION_INT" -lt "24" ]' \
+  'bind-key -t vi-copy v begin-selection; \
+   bind-key -t vi-copy C-v rectangle-toggle; \
+   bind-key -T vi-copy y copy-selection-and-cancel' \
+  'bind-key -T copy-mode-vi v send -X begin-selection; \
+   bind-key -T copy-mode-vi C-v send -X rectangle-toggle; \
+   bind-key -T copy-mode-vi y send -X copy-selection-and-cancel'
 
 # Renumber windows after removing one.
-if-shell "$tmux_17_plus" "set-option -g renumber-windows on"
-
-# Smart pane switching with awareness of vim splits in combination with
-# vim-tmux-navigator.
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+if-shell '[ "$TMUX_VERSION_INT" -ge "17" ]' \
+  'set-option -g renumber-windows on'
 
 # Install tmux plugin manager if it is not already installed.
-if "test ! -d ~/.tmux/plugins/tpm" \
-  "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm'"
+if-shell 'test ! -d ~/.tmux/plugins/tpm' \
+  'run-shell "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/install_plugins"'
 
 # Plugins.
-set -g @plugin "tmux-plugins/tpm"
-set -g @plugin "tmux-plugins/tmux-sensible"
-set -g @plugin "tmux-plugins/tmux-pain-control"
-set -g @plugin "tmux-plugins/tmux-yank"
-set -g @plugin "mshkrebtan/base16-tmux"
-set -g @plugin "nhdaly/tmux-scroll-copy-mode"
-
-# Variable that is true if tmux version is 2.1 or higher.
-tmux_21_plus='[ $(tmux -V | tr -dC "[:digit:]") -ge 21 ]'
+set-option -g @plugin 'tmux-plugins/tpm'
+set-option -g @plugin 'tmux-plugins/tmux-sensible'
+set-option -g @plugin 'tmux-plugins/tmux-pain-control'
+set-option -g @plugin 'tmux-plugins/tmux-yank'
+set-option -g @plugin 'mshkrebtan/base16-tmux'
+set-option -g @plugin 'nhdaly/tmux-better-mouse-mode'
+set-option -g @plugin 'christoomey/vim-tmux-navigator'
 
 # Enable mouse support.
-if-shell "$tmux_21_plus" "set-option -g mouse on"
+if-shell '[ "$TMUX_VERSION_INT" -ge "21" ]' \
+  'set-option -g mouse on'
 
 # Initialize tmux plugin manager (keep this line at the very bottom of
 # tmux.conf).
-run "~/.tmux/plugins/tpm/tpm"
+run-shell '~/.tmux/plugins/tpm/tpm'
