--- a/.tmux.conf
+++ b/.tmux.conf
@@ -75,3 +75,15 @@ if-shell '[ "$TMUX_VERSION_INT" -ge "21" ]' \
 # Initialize tmux plugin manager (keep this line at the very bottom of
 # tmux.conf).
 run-shell '~/.tmux/plugins/tpm/tpm'
+
+# Override bindings from tmux-pain-control to work in older tmux versions.
+if-shell '[ "$TMUX_VERSION_INT" -lt "30" ]' \
+  'unbind-key "<"; \
+   unbind-key ">"; \
+   bind-key -r "<" swap-window -t -1; \
+   bind-key -r ">" swap-window -t +1'
+
+# Override c binding from tmux-pain-control to create new windows at the next
+# index up from the index of the current window (-a option) in addition to
+# start at the same path as the current pane.
+bind-key c new-window -a -c "#{pane_current_path}"
