Change tmux true color terminal override

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,9 +14,9 @@ set-window-option -g mode-keys vi
 # terminal clipboard content using xterm escape sequences.
 set-option -s set-clipboard on
 
-# Tell tmux that any 256 color terminal in which it is running supports RGB
-# colors.
-set-option -ga terminal-overrides ',*256col*:RGB'
+# Tell tmux that any 256 color terminal in which it is running supports
+# true color.
+set-option -a terminal-overrides ',*256col*:Tc'
 
 # Update default copy mode copy binding 'Enter' to also use copy-pipe.
 # TODO: Figure out a way to do this that not only works on OS X.
